--- a/TestCase.API/TestCase.API.csproj
+++ b/TestCase.API/TestCase.API.csproj
@@ -8,6 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CsvHelper" Version="31.0.2" />
+        <PackageReference Include="Dapper" Version="2.1.35" />
+        <PackageReference Include="GeoTimeZone" Version="5.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
           <PrivateAssets>all</PrivateAssets>
