--- a/TestCase.Application/TestCase.Application.csproj
+++ b/TestCase.Application/TestCase.Application.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+      <PackageReference Include="NPOI" Version="2.6.2" />
     </ItemGroup>
 
     <ItemGroup>
