--- a/TestCase.API/TestCase.API.csproj
+++ b/TestCase.API/TestCase.API.csproj
@@ -11,11 +11,14 @@
         <PackageReference Include="CsvHelper" Version="31.0.2" />
         <PackageReference Include="Dapper" Version="2.1.35" />
         <PackageReference Include="GeoTimeZone" Version="5.3.0" />
+        <PackageReference Include="GoogleMaps.LocationServices" Version="1.2.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="NodaTime" Version="3.1.11" />
         <PackageReference Include="NPOI" Version="2.6.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
