--- a/TestCase.Application/TestCase.Application.csproj
+++ b/TestCase.Application/TestCase.Application.csproj
@@ -14,7 +14,9 @@
       <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+      <PackageReference Include="NodaTime" Version="3.1.11" />
       <PackageReference Include="NPOI" Version="2.6.2" />
+      <PackageReference Include="TimeZoneMapper" Version="1.3.1" />
     </ItemGroup>
 
     <ItemGroup>
